--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 	<groupId>com.naveen</groupId>
 	<artifactId>coderhack</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>coderhack</name>
+	<name>CoderHack</name>
 	<description>A RESTful API service using Spring Boot to manage the Leaderboard for a Coding Platform while using MongoDB to persist the data.</description>
 	<url/>
 	<licenses>
@@ -27,7 +27,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>22</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -38,7 +38,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
-
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
